# repstack-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
repstack/: __init__.py  __main__.py  ingest.py  llm_parser.py  metrics.py  models.py  normalize.py  server.py  storage.py
repstack/data/: exercise_registry.json
repstack/data/aliases/: hevy.json  strong.json
repstack_mcp/: __init__.py  __main__.py  ingest.py  llm_parser.py  models.py  normalize.py  server.py  storage.py
samples/: bad_workout.csv  bad_workout.json  bodyweight_heavy_session.csv  csv_app_export.csv  empty_columns.csv  good_workout.csv  good_workout.json  good_workout.txt  good_workout_sessions.json  good_workout_with_date.csv  hevy_style_export.csv  ingest_tool_examples.json  invalid_workout.json  json_user.js  messy_workout.txt  search_exercises_examples.json  unmapped_close_match.csv
scripts/: README.md  test_ingest.py  test_metrics.py  test_search.py
specs/: SPEC.md  ingest_policy.md
tests/: __init__.py  test_ingest_csv.py  test_ingest_policy.py  test_ingest_text_mocked_llm.py  test_metrics.py  test_search_exercises.py
