[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repstack-mcp"
version = "1.0.0"
description = "Repstack MCP server: log ingestion and metrics over canonical workout logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
repstack-mcp = "repstack_mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["repstack_mcp*"]
